atualização do curso

--- a/desafios_php/resolucao_aula/desafio01/index.html
+++ b/desafios_php/resolucao_aula/desafio01/index.html
@@ -3,19 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Antecessor e Sucessor</title>
+    <title>Desafio PHP</title>
     <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
-    <header>
+    <main>
         <h1>Informe um numero</h1>
-    </header>
-    <section>
-        <form action="recebeDesafio02.php" method="GET">
-            <label for="numero">Numero</label>
-            <input type="number" name="numero" id="numero">
+        <form action="resposta.php" method="get">
+            <label for="num">Numero</label>
+            <input type="number" name="num" id="num">
             <input type="submit" value="Calcular">
         </form>
-    </section>
+    </main>
+    
 </body>
 </html>
